feat(frontend): implemented set my photo and set my username, photo correctly load at login and at update
